# pathtracer

./: .gitignore  CMakeLists.txt  PathTracerDemo.cpp
include/: BasicMaterial.hpp  Camera.hpp  Color.hpp  ColorBounce.hpp  Geometry.hpp  Image.hpp  LinearAlgebra.hpp  Object.hpp  ObjectTree.hpp  PathTracer.hpp  RandomNumberGenerator.hpp  RenderSettings.hpp  Renderer.hpp  Scene.hpp  SkyBox.hpp  ToneMapper.hpp
src/: BasicMaterial.cpp  Camera.cpp  Color.cpp  ColorBounce.cpp  Geometry.cpp  Image.cpp  LinearAlgebra.cpp  Object.cpp  ObjectTree.cpp  PathTracer.cpp  RandomNumberGenerator.cpp  RenderSettings.cpp  Renderer.cpp  Scene.cpp  SkyBox.cpp  ToneMapper.cpp
